2003-10-21  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-document.c, cong-document.h, cong-dom-view.c, cong-editor-area.c, cong-location.c, cong-location.h, cong-overview-view.c, cong-tree-view.c, cong-tree-view.h, cong-util.c, cong-util.h

	Clicking on tree views now updates the selection.
	
	* cong-document.c, cong-document.h, cong-editor-area-expander.c, cong-editor-area.c, cong-editor-area.h, cong-editor-node.c, cong-editor-node.h, cong-editor-widget.h, cong-editor-widget3.c, cong-range.c, cong-range.h, cong-selection.h, cong-tree-view.c, select.c

	Big overhaul of selection support within editor widget

2003-10-20  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-area-labelled.c, cong-editor-area-span-tag.c, cong-editor-area-structural.c, cong-editor-area-unknown-tag.c, cong-editor-area.c, cong-editor-area.h, plugin-paragraph-area-paragraph.c

	Moved the copy-and-pasted area state debugging code into a utility function

2003-10-20  David Hoover <karma@deadmoose.com>
 
 	* cong-file-save.c, cong-primary-window.c, global.h
 
 	Change the toolbar to give 'save' as an option instead of 'save as' 

2003-10-20  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-file-import.c

	Replaced gnome_vfs_mime_type_from_name with gnome_vfs_get_mime_type, added relevant header, to help fix 64-bit compilation
	
	* cong-dispspec.h, cong-editor-widget.h, cong-modification-cursor-change.c, global.h

	Declaration fixes to help support 64-bit architectures, based on work by Andreas Schwab
	
	* cong-editor-area-structural.c, cong-editor-widget3.c

	Structural headers now have an animated disclosure triangle for folding the content
	
	* cong-editor-area-expander.c, cong-editor-area-expander.h, Makefile.am

	New files: CongEditorAreaExpander subclass

	* cong-editor-child-policy.c

	Remove spurious return from cong_editor_child_policy_remove_areas_for_node

2003-10-17  David Malcolm <david@davemalcolm.demon.co.uk>
